examples/regressions/119_top_level_subscopes.an
if true then
    f () = print "hi"
    g () = f ()
    g ()

// args: --delete-binary --no-color
// expected exit status: 1
// expected stderr:
// examples/regressions/119_top_level_subscopes.an:1:1
// 1 | if true then	// error: Expected a top-level item but found `if`
//   | ^^
// 2 |     f () = print "hi"
// 
// Found 1 error and 0 warnings

